wip/added db.py
TODO: integrate db.py methods into the main.py

--- a/v3.1.0/requirements.txt
+++ b/v3.1.0/requirements.txt
@@ -20,3 +20,9 @@ faster-whisper>=0.10.0
 
 # Environment and utilities
 python-dotenv>=0.19.0
+
+# db.py
+pymongo[srv]
+faiss-cpu==1.11.0
+motor==3.7.1
+
